#6 refactor AWS CLI into a bash script

--- a/bin/.env.example
+++ b/bin/.env.example
@@ -1,1 +1,5 @@
 PROJECT_ROOT='/workspace/terraform-beginner-bootcamp-2023'
+##this is an example credential (NEVER EVER PUT REAL CREDENTIALS AND COMMIT TO REPO)
+AWS_ACCESS_KEY_ID= 'AKIAIOSFODNN7EXAMPLE'
+AWS_SECRET_ACCESS_KEY= 'wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY'
+AWS_DEFAULT_REGION= 'us-east-1'
