--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,7 @@
 tasks:
   - name: terraform
     before: |
+      cd $PROJECT_ROOT
       source ./bin/install_terraform_cli
       source ./bin/set_tf_alias
       source ./bin/generate_tfrc_credentials
@@ -9,6 +10,7 @@ tasks:
     env:
       AWS_CLI_AUTO_PROMPT: on-partial
     before: |
+      cd $PROJECT_ROOT
       source ./bin/install_aws_cli
       source ./bin/set_tf_alias
       source ./bin/generate_tfrc_credentials
@@ -17,6 +19,12 @@ tasks:
       npm install --global http-server
     command:
       http-server
+  - name: sinatra
+    before: |
+      cd $PROJECT_ROOT
+      cd terratowns_mock_server
+      bundle install
+      bundle exec ruby server.rb 
 vscode:
   extensions:
     - amazonwebservices.aws-toolkit-vscode
