#50 fix issues with provider, setup two towns

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,7 +1,10 @@
-user_uuid="be4ffd1a-4bb2-49e9-b300-2a7fe85c1ea2"
-bucket_name = "myterrabucket23"
-index_html_filepath = "/workspace/terraform-beginner-bootcamp-2023/public/index.html"
-error_html_filepath = "/workspace/terraform-beginner-bootcamp-2023/public/error.html"
-assets_path="/workspace/terraform-beginner-bootcamp-2023/public/assets"
-content_version=1
 terratowns_endpoint = "https://terratowns.cloud/api"
+fallout3 = {
+    fallout3_public_path = "/workspace/terraform-beginner-bootcamp-2023/public/fallout3"
+    content_version = 2
+}
+
+chocolateChip = {
+    chocolateChip_public_path = "/workspace/terraform-beginner-bootcamp-2023/public/chocolateChip_public_path"
+    content_version = 1
+}
